Fix lint errors from feature/db-udate
